# Crypto-HFT-System

./: .dockerignore  .gitignore  BINANCE_DRY_RUN_README.md  COMPILATION_FIXES.md  Cargo.toml  Dev TO-DO List.md  Dockerfile  README.md  System_Structure.md  clippy.toml  docker-compose.yml  rustfmt.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
benches/: message_parsing_benchmark.rs  orderbook_benchmark.rs
config/: example.toml
scripts/: deploy.sh  validate_quickstart.sh
specs/001-market-making/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: binance_dry_run.rs  binance_dry_run_simple.rs  lib.rs  main.rs
src/connectors/: binance.rs  dry_run.rs  mock.rs  mod.rs
src/core/: events.rs
src/exchanges/: aster.rs  binance.rs  bybit.rs  connection_manager.rs  dydx.rs  error.rs  error_handler.rs  gate.rs  hyperliquid.rs  market_stream_wrapper.rs  mock.rs  mod.rs  okx.rs  order_router.rs
src/indicators/: mod.rs  orderbook_indicators.rs  trade_flow_indicators.rs
src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs
src/oms/: mod.rs  order_manager.rs  rate_limiter.rs
src/orderbook/: mod.rs  orderbook.rs  types.rs
src/realtime/: error_recovery.rs  event_loop.rs  event_loop_minimal.rs  integration_tests.rs  mod.rs  order_executor.rs  performance_monitor.rs  risk_manager.rs  signal_generator.rs
src/risk/: mod.rs  rules.rs  shadow_ledger.rs
src/security/: api_keys.rs  mod.rs
src/strategies/: arbitrage.rs  event_driven.rs  market_making.rs  mod.rs  portfolio_rebalance.rs  prediction.rs  simple_arbitrage.rs
src/strategy/: engine.rs  mod.rs  simple_arbitrage.rs
src/traits/: events.rs  execution.rs  market_data.rs  mod.rs  strategy.rs
src/types/: mod.rs  price.rs  size.rs  symbol.rs
tests/: test_market_making_simple.rs  test_phase10_dry_run.rs  test_phase11_cleanup.rs  test_phase12_verification.rs  test_phase13_cd_verification.rs  test_phase13_ef_verification.rs  test_phase13_gj_verification.rs  test_phase13_k_verification.rs  test_phase5_strategy_fixes.rs  test_phase7_risk_fixes.rs  test_phase8_oms_fixes.rs  test_phase9_realtime_fixes.rs
(+25 files in other folders)
