[package]
name = "crypto_hft"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
rust_decimal = { version = "1.36", features = ["serde-float"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Performance dependencies
smallvec = { version = "1.13", features = ["serde"] }
simd-json = "0.13"

# Testing dependencies
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
wiremock = "0.6"

[dev-dependencies]
tokio-test = "0.4"

[[bench]]
name = "orderbook_benchmark"
harness = false

[[bench]]
name = "message_parsing_benchmark"
harness = false
